add user authentication

--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,5 @@
 # Go workspace file
 go.work
 
-# End of https://www.toptal.com/developers/gitignore/api/go
+# End of https://www.toptal.com/developers/gitignore/api/gotls/
+tls/
